[tool.poetry]
name = "python-flask-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
vulture = "^2.7"
lizard = "^1.17.10"
black = "^23.3.0"
pylint = "^2.17.2"
darglint = "^1.8.1"
ruff = "^0.0.261"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
